test/invalid/idl/bigint-keyword.webidl
dictionary Dictionary {
  long long bigint;
};
